# zarr-datausion

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  REPL.md  data_gen.py
.githooks/: pre-commit
.github/workflows/: publish.yml  test.yml
data/weather.zarr/: zarr.json
data/weather.zarr/humidity/: zarr.json
data/weather.zarr/humidity/c/0/0/: 0
data/weather.zarr/humidity/c/1/0/: 0
data/weather.zarr/humidity/c/2/0/: 0
data/weather.zarr/humidity/c/3/0/: 0
data/weather.zarr/humidity/c/4/0/: 0
data/weather.zarr/humidity/c/5/0/: 0
data/weather.zarr/humidity/c/6/0/: 0
data/weather.zarr/lon/: zarr.json
data/weather.zarr/temperature/: zarr.json
data/weather.zarr/temperature/c/0/0/: 0
data/weather.zarr/temperature/c/1/0/: 0
data/weather.zarr/temperature/c/2/0/: 0
data/weather.zarr/temperature/c/3/0/: 0
data/weather.zarr/temperature/c/4/0/: 0
data/weather.zarr/temperature/c/5/0/: 0
data/weather.zarr/temperature/c/6/0/: 0
data/weather.zarr/time/: zarr.json
data/weather.zarr/time/c/: 0
docs/: CLI_REFERENCE.md
examples/: query_era5.rs  query_gcs.rs  query_synthetic.rs  query_zarr.rs
examples/common/: mod.rs
scripts/: data_gen.py  generate_data.sh  install-hooks.sh
src/: lib.rs
src/datasource/: factory.rs  mod.rs  zarr.rs
src/optimizer/: count_optimization.rs  minmax_optimization.rs  mod.rs
src/physical_plan/: mod.rs  zarr_exec.rs
src/reader/: coord.rs  dtype.rs  mod.rs  schema_inference.rs  stats.rs  tracked_store.rs  zarr_reader.rs
tests/: integration_error.rs  integration_formats.rs  integration_optimizer.rs  integration_pushdown.rs  integration_query.rs
tests/common/: mod.rs
