[package]
name = "zarr-datafusion"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
arrow = "57.1.0"
async-trait = "0.1"
datafusion = "51.0.0"
futures = "0.3.31"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
zarrs = { version = "0.22.10", features = ["ndarray", "async"] }
zarrs_object_store = { version = "0.6", features = ["gcp", "aws"] }
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "query_era5"
path = "examples/query_era5.rs"

[[example]]
name = "query_synthetic"
path = "examples/query_synthetic.rs"

[[bin]]
name = "zarr-cli"
path = "src/bin/zarr_cli/main.rs"

[dependencies.rustyline]
version = "15"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.sqlparser]
version = "0.53"

[dependencies.nu-ansi-term]
version = "0.50"
